--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9001
 Imports: 
     base,
+    curl,
     dplyr,
     htmltools,
     jsonlite,
