--- a/.github/workflows/build_table.yml
+++ b/.github/workflows/build_table.yml
@@ -62,7 +62,7 @@ jobs:
           sessioninfo::session_info(pkgs, include_base = TRUE)
         shell: Rscript {0}
 
-    ### Run script -------------------------------------------------------------
+   ### Run script -------------------------------------------------------------
 
       - name: Run script that build table
         run: |
@@ -71,3 +71,16 @@ jobs:
 
       - name: Check output
         run: ls tmp/
+
+  ### Upload to AWS S3 ---------------------------------------------------------
+
+      - name: Deploy to AWS S3
+        id: deploy
+        uses: fmichonneau/s3-sync-action@log-output
+        with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SOURCE_DIR: tmp/
