--- a/.github/workflows/build_table.yml
+++ b/.github/workflows/build_table.yml
@@ -24,9 +24,10 @@ jobs:
     ### Install R ------------------------------------------------------------
 
       - name: Set up R
-        uses: r-lib/actions/setup-r@master
+        uses: r-lib/actions/setup-r@v2
         with:
-          r-version: 'release'
+          use-public-rspm: true
+          install-r: false
 
       - name: Query dependencies
         run: |
