add update step

--- a/.github/workflows/build_table.yml
+++ b/.github/workflows/build_table.yml
@@ -28,6 +28,8 @@ jobs:
         with:
           use-public-rspm: true
           install-r: false
+      - name: Update apt
+        run: sudo apt update -y
       - name: Set up dependencies
         uses: r-lib/actions/setup-r-dependencies@v2
         with: 
